# weifinder-indexer

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  fly.toml  indexer.prod.toml  indexer.toml  mainnet.fly.toml  testnet.fly.toml  todos.md
.github/workflows/: fly-deploy-mainnet.yml  fly-deploy-testnet.yml
migrations/2025-12-25-182552-0000_create_checkpoints_table/: up.sql
migrations/2026-01-15-061729-0000_create_checkpoints/: down.sql  up.sql
src/: error.rs  indexer.rs  lib.rs  main.rs  models.rs  schema.rs  settings.rs  tui.rs
src/indexer/: block_fetcher.rs  block_saver.rs  head_watcher.rs  mod.rs  provider.rs  types.rs
src/tui/: error.rs  exporter.rs  mod.rs  stats.rs
